# compound-factor-iter

./: Cargo.toml  README.md
src/: approx_permutation_iter.rs  common.rs  letter_distribution.rs  lib.rs  main.rs  main.slow_but_working.rs  manhattan_permutation_iter.rs  ordered_permutation_iter.rs  radix_permutation_iter.rs  tests.rs
