[package]
name = "compound_factor_iter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.15"
rand = {version = "0.8.0", optional = true}
rand_pcg = {version = "0.3.1", optional = true}

[dev-dependencies]
rand = {version = "0.8.0", optional = false}
rand_pcg = {version = "0.3.1", optional = false}

[features]
letter_distribution = ["rand", "rand_pcg"]

