[package]
name = "compound_factor_iter"
version = "0.1.0"
edition = "2021"
authors = ["Luke Peterson <luke@infoplatter.com>"]
license = "MIT OR Apache-2.0"
description = "Iterator types for output permutations from a function combining multiple discrete factors"
repository = "https://github.com/luketpeterson/compound-factor-iter/"
readme = "README.md"
keywords = ["algorithm", "search", "manhattan", "iterator", "probabilities"]
categories = ["algorithms", "data-structures", ]

[dependencies]
num-traits = "0.2.15"
rand = {version = "0.8.0", optional = true}
rand_pcg = {version = "0.3.1", optional = true}

[dev-dependencies]
rand = {version = "0.8.0", optional = false}
rand_pcg = {version = "0.3.1", optional = false}

[features]
letter_distribution = ["rand", "rand_pcg"]

